(feat) Config Car module - Fixed error on modal
- Fixed error that made not visible the options of the car that was selected on the modal before you select other car
- Modified configurable.js from ImprovedProducts
- Added some CSS styling
- Done some code cleaning and reformatting
- Tested and working

refs: #1vj5w3r

--- a/app/code/Comerline/ConfigCar/view/frontend/web/css/configCar.css
+++ b/app/code/Comerline/ConfigCar/view/frontend/web/css/configCar.css
@@ -54,13 +54,26 @@
     margin-right: auto;
 }
 
-#compatible-rims table th, #compatible-options table th {
+.improved-products-description table {
+    max-width: 700px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#compatible-rims table th, #compatible-options table th, .improved-products-description table th {
     background-color: rgb(0, 86, 170);
     color: white;
     padding: 9px 20px;
-    border-radius: 4px 4px 0px 0px;
     border: 0px;
     margin: 12px 12px 12px 12px;
+}
+
+#compatible-rims table th:last-child, #compatible-options table th:last-child, .improved-products-description table th:last-child {
+    border-radius: 0px 4px 0px 0px;
+}
+
+#compatible-rims table th:first-child, #compatible-options table th:first-child, .improved-products-description table th:first-child {
+    border-radius: 4px 0px 0px 0px;
 }
 
 #attribute-option {
@@ -73,9 +86,9 @@
     color: #282828 !important;
 }
 
-#compatible-table {
-    border-collapse: separate;
-    border-spacing: 5px 0;
+#feedback {
+    text-align: center;
+    color: #00bf67;
 }
 
 #green {
