--- a/app/code/Comerline/ImprovedProduct/view/frontend/web/css/improved-products.css
+++ b/app/code/Comerline/ImprovedProduct/view/frontend/web/css/improved-products.css
@@ -29,24 +29,10 @@
 
 .improved-products-description {
     max-height:463px;
-    overflow: scroll;
+    overflow: auto;
     text-align: center;
 }
 
 .product-description {
     text-align: left;
-}
-
-.table-styling > tbody > tr > th {
-    text-align: center;
-}
-
-.table-styling, th, td {
-    border: 1px solid black;
-}
-
-.table-styling {
-    width: 40%;
-    margin-left: auto;
-    margin-right: auto;
 }
